should fix #tools falling behind the nav, and large space at bottom of screen

--- a/app/assets/stylesheets/application/_base.scss
+++ b/app/assets/stylesheets/application/_base.scss
@@ -277,8 +277,10 @@ a:hover {
 }
 
 
-#content .container {
-  padding-bottom: 5rem;
+#content {
+  .top-section {
+    display: inline-block;
+  }
 }
 
 .avatar-frame {
